# opengl-game

./: .gitignore  CMakeLists.txt  DebugDraw.cpp  Entity.cpp  Game.cpp  IndexBuffer.cpp  InputManager.cpp  README.md  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture2D.cpp  VertexBuffer.cpp  main.cpp  vcpkg.json
Assets/Shaders/: debug.frag  debug.vert  shader.vert  sprite.frag  sprite.vert
include/: DebugDraw.h  Entity.h  Errors.h  Game.h  IndexBuffer.h  InputManager.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture2D.h  VertexBuffer.h
